--- a/WorkoutDiary/WorkoutDiary.csproj
+++ b/WorkoutDiary/WorkoutDiary.csproj
@@ -15,4 +15,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Views\Workouts\" />
+  </ItemGroup>
+
 </Project>
